--- a/ansible-helper/template/chrony-machineconfig.j2
+++ b/ansible-helper/template/chrony-machineconfig.j2
@@ -6,6 +6,8 @@ metadata:
   name: 99-{{item}}-chrony-configuration
 spec:
   config:
+    ignition:
+      version: 2.2.0
     storage:
       files:
       - contents:
