--- a/ansible-helper/template/recursor.conf.j2
+++ b/ansible-helper/template/recursor.conf.j2
@@ -1,7 +1,7 @@
 local-address=0.0.0.0 ::
 # allow-from=192.168.7.0/0    #允许所有用户端请求
 dnssec=off    #关闭dnssec
-forward-zones={%for cls in cluster %}{{ cls.base_domain }}=127.0.0.1:5301,{{ cls.node[0].ip_addr.split('.')[2] }}.{{ cls.node[0].ip_addr.split('.')[1] }}.{{ cls.node[0].ip_addr.split('.')[0] }}.in-addr.arpa=127.0.0.1:5301{%endfor%}{%for cls in pdns.static %}{{ cls.base_domain }}=127.0.0.1:5301,{%endfor%}
+forward-zones={%for cls in cluster %}{{ cls.base_domain }}=127.0.0.1:5301,{%endfor%}{%for cls in pdns.static %}{{ cls.base_domain }}=127.0.0.1:5301,{%endfor%}{{ ptr.addr }}.in-addr.arpa=127.0.0.1:5301
 
 forward-zones-recurse=.={{ pdns.forward }}
 setgid=pdns-recursor
