--- a/ansible-helper/template/zone.reserve.conf.j2
+++ b/ansible-helper/template/zone.reserve.conf.j2
@@ -1,17 +1,20 @@
 $TTL 10 
-@ IN SOA ns1.{{ item.base_domain }}. root(
+@ IN SOA ns1.ptr.redhat.ren. root(
         2014080704 ; Serial Number (date YYYYMMDD++) 
         3H              ; refresh (3 hours)
         30M             ; retry (30 minutes)
         2W              ; expiry (2 weeks)
         1W )            ; minimum (1 week)
-        IN NS ns1.{{ item.base_domain }}.
+        IN NS ns1.ptr.redhat.ren.
 ;@       IN    LUA    A    "ifportup(6443, {'192.168.7.13', '192.168.7.14', '192.168.7.15'})"
 ;ns1     IN A {{ helper.ip_addr }}
 ;
 ; The api points to the IP of your load balancer
-{% for nd in item.node %}
-{{ nd.ip_addr.split('.')[3] }}	IN	PTR	{{ nd.name | lower }}.{{ item.base_domain | lower }}.
+{% for cls in cluster %}
+{% for nd in cls.node %}
+{{ nd.ip_addr.split('.')[3] }}	IN	PTR	{{ nd.name | lower }}.{{ cls.base_domain | lower }}.
 {% endfor %}
+{% endfor %}
+;end
 
 
