--- a/ansible-helper/template/zone.reserve.conf.j2
+++ b/ansible-helper/template/zone.reserve.conf.j2
@@ -1,18 +1,20 @@
 $TTL 10 
-@ IN SOA ns1.ptr.redhat.ren. root(
+@ IN SOA ns1.{{ item.domain }}. root(
         2014080704 ; Serial Number (date YYYYMMDD++) 
         3H              ; refresh (3 hours)
         30M             ; retry (30 minutes)
         2W              ; expiry (2 weeks)
         1W )            ; minimum (1 week)
-        IN NS ns1.ptr.redhat.ren.
+        IN NS ns1.{{ item.domain }}.
 ;@       IN    LUA    A    "ifportup(6443, {'192.168.7.13', '192.168.7.14', '192.168.7.15'})"
 ;ns1     IN A {{ helper.ip_addr }}
 ;
 ; The api points to the IP of your load balancer
 {% for cls in cluster %}
 {% for nd in cls.node %}
+{% if ( ( nd.ip_addr.split('.')[0] == item.addr.split('.')[0] ) and ( nd.ip_addr.split('.')[1] == item.addr.split('.')[1] ) and ( nd.ip_addr.split('.')[2] == item.addr.split('.')[2] ) ) %}
 {{ nd.ip_addr.split('.')[3] }}	IN	PTR	{{ nd.name | lower }}.{{ cls.base_domain | lower }}.
+{% endif %}
 {% endfor %}
 {% endfor %}
 ;end
