for dns forward empty

--- a/ansible-helper/template/recursor.conf.j2
+++ b/ansible-helper/template/recursor.conf.j2
@@ -3,7 +3,10 @@ local-address={{ pdns.bind }}
 dnssec=off    #关闭dnssec
 forward-zones={%for cls in cluster %}{{ cls.base_domain }}=127.0.0.1:5301,{%endfor%}{%for cls in pdns.static %}{{ cls.base_domain }}=127.0.0.1:5301,{%endfor%}{% for pt in ptr %}{{ pt.addr.split('.')[2] }}.{{ pt.addr.split('.')[1] }}.{{ pt.addr.split('.')[0] }}.in-addr.arpa=127.0.0.1:5301,{% endfor %}
 
+{% if pdns.forward is defined %}
 forward-zones-recurse=.={{ pdns.forward }}
+{% endif %}
+
 setgid=pdns-recursor
 setuid=pdns-recursor
 security-poll-suffix=
